<resources>
    <string name="app_name" translatable="false">IntercambiosJR</string>
    <string name="prefs_file" translatable="false">com.example.intercambios.PREFERENCE_FILE_KEY</string>
    <string name="web_client_id" translatable="false">347976186952-e3e2ee9c27iack1cun35ml46qb1iclgk.apps.googleusercontent.com</string>
    <string name="comprueba_conn">Comprueba tu conexión a internet.</string>
    <string name="espera_seg">Espera un segundo…</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="formatted_date">%1$d-%2$02d-%3$02d</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="perfil">Perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="foto_avatar_de_perfil">Foto/Avatar de perfil</string>
    <string name="no_descripcion">Sin descripción</string>
    <string name="no_encontrado">No encontrado.</string>
    <string name="no_registrado">No registrado</string>
    <string name="usuario_info">Nombre: %1$s\nAlias: %2$s\nEmail: %3$s</string>
    <string name="salir_intercambio">Salir del\nintercambio</string>
    <string name="eliminar_intercambio">Eliminar\nintercambio</string>
    <string name="adelantar_sorteo">Adelantar\nsorteo</string>
    <string name="escoger_tema">Seleccionar\ntema</string>
    <string name="unirme_intercambio">Acepto unirme al intercambio</string>
    <string name="consultar_sorteo">Consultar\nsorteo</string>
    <string name="warning_salir">El sorteo ya se realizó. Debes cumplir por lo que ya no se te permite abandonar el intercambio.</string>
    <string name="warning_sorteo">El sorteo aún no se realiza, espera el momento!</string>
    <string name="credenciales_erroneas">Error al iniciar sesión. Credenciales erroneas.</string>
    <string name="error_inicio_google">Error durante el inicio de sesión con Google: %1$s</string>
    <string name="recuperacion_pass">Recuperación de contraseña</string>
    <string name="recuperacion_enviado">Correo de recuperación enviado. Por favor, revisa tu bandeja de entrada.</string>
    <string name="recuperacion_error_enviado">No se pudo enviar el correo de recuperación. Verifica la dirección de correo.</string>
    <string name="correo_requerido">Por favor, ingresa tu correo electrónico.</string>
    <string name="monto_intercambio">$%1$.2f</string>
    <string name="codigo_intercambio">Código: %1$s</string>
    <string name="hora_intercambio">Hora: %1$s</string>
    <string name="fecha_max_registro">Fecha límite: %1$s</string>
    <string name="num_personas">%1$d participantes</string>
    <string name="estatus_participante">• %1$s - Estatus: %2$s\n\t\t%3$s</string>
    <string name="cantidad_participantes">Participantes: %1$s / %2$s</string>
    <string name="organizador">Organizador</string>
    <string name="activo">Activo</string>
    <string name="inv_pendiente">Invitación pendiente</string>
    <string name="nuevo_intercambio">Nuevo Intercambio</string>
    <string name="color_del_intercambio">Color del intercambio</string>
    <string name="descrip_del_intercambio">Descripción del intercambio</string>
    <string name="no_m_ximo_de_participantes">No. Máximo de participantes</string>
    <string name="participantes">Participantes</string>
    <string name="temas_para_regalos">Temas para regalos</string>
    <string name="fecha_l_mite_de_registro">Fecha límite de registro</string>
    <string name="c_digo_de_invitaci_n">Código de invitación</string>
    <string name="monto_del_intercambio">Monto del intercambio $</string>
    <string name="lugar_del_intercambio">Lugar del intercambio</string>
    <string name="hora_del_intercambio">Hora del intercambio</string>
    <string name="fecha_del_intercambio">Fecha del intercambio</string>
    <string name="editar_intercambio">Editar intercambio</string>
    <string name="btn_regresar">Botón regresar</string>
    <string name="intercambio">Intercambio</string>
    <string name="ingrese_el_c_digo">Ingrese el código</string>
    <string name="tengo_un_c_digo">Tengo un código</string>
    <string name="buscar">Buscar</string>
    <string name="no">No</string>
    <string name="si">Sí</string>
    <string name="seguro_que_quieres_salir">¿Seguro que quieres salir de la aplicación?</string>
    <string name="salir_title">SALIR</string>
    <string name="error_title">ERROR</string>
    <string name="ok">Aceptar</string>
    <string name="contact_no_email">El contacto seleccionado (%1$s) no tiene un email asociado.</string>
    <string name="limitedepersonas">Alcanzaste el límite de participantes, aumenta el valor si quieres agregar más personas.</string>
    <string name="personasnecesarias">Es necesario que primero indiques el número de participantes, recuerda que debe ser mayor a uno.</string>
    <string name="permisos_contatactos">Es necesario otorgar permisos para acceder a los contactos.</string>
    <string name="envio_denegado_campos_vacios">No se pudo enviar el formulario. Rellena todos los campos.</string>
    <string name="envio_denegado_conexion">No tienes conexión a Internet. Por favor, verifica e intenta de nuevo.</string>
    <string name="selecciona_un_tema">Selecciona un tema</string>
    <string name="rechazar_invitacion">Rechazar invitación</string>
    <string name="no_encontrado_email">No se encontró ningún intercambio con el código proporcionado.</string>
    <string name="sorteo_listo">El sorteo ya se realizó.</string>
    <string name="resultados_listos">Las asignaciones están listas, ya puedes consultar la tuya desde los detalles.</string>
    <string name="crear_intercambio">Crear Intercambio</string>
    <string name="cancelar">Cancelar</string>
    <string name="invitar_contacto">Invitar participante +</string>
    <string name="invitacion_rechazada">Saliste del intercambio, no se le notificará a nadie que declinaste la invitación.</string>
    <string name="error_rechazo">Algo salió mal al intentar salir del intercambio.</string>
    <string name="error_union">Algo salió mal al intentar unirte al intercambio.</string>
    <string name="rechazo_titulo">INVITACIÓN RECHAZADA</string>
    <string name="union_title">UNIÓN EXITOSA</string>
    <string name="union_message">Has entrado al intercambio con éxito!!</string>
    <string name="success_salida_titulo">INTERCAMBIO ELIMINADO</string>
    <string name="success_message">El intercambio fue eliminado con éxito junto con sus participantes.</string>
    <string name="success_salir_exchange">Saliste del intercambio correctamente, no se le notificará a nadie de tu ausencia.</string>
    <string name="error_eliminar">Algo salió mal al intentar eliminar el intercambio.</string>
    <string name="identificador_de_color">Identificador de color:</string>
    <string name="nombre_del_intercambio">Nombre del intercambio</string>
    <string name="realizando_sorteo_espera_un_momento">Realizando sorteo, espera un momento.</string>
    <string name="enviar_invitacion">Enviar invitación</string>
    <string name="inv_asunto">Invitación a un intercambio</string>
    <string name="inv_mensaje">Hola! Te invito al intercambio: %1$s. Únete usando este enlace: %2$s o el siguiente código: %3$s.</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ingresar">Ingresar</string>
    <string name="acceder_con_google">Acceder con Google</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="alias">Alias</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tengo_una_cuenta">Ya tengo una cuenta</string>
    <string name="tus_intercambios">Tus intercambios</string>
    <string name="idioma">Idioma</string>
    <string name="tema">Tema</string>
    <string name="ingles">Inglés</string>
    <string name="espanol">Español</string>
    <string name="oscuro">Oscuro</string>
    <string name="claro">Claro</string>
    <string-array name="color_items">
        <item>#FFB6B6</item> 
        <item>#FF9A8B</item> 
        <item>#FF7F50</item> 
        <item>#FFCC99</item> 
        <item>#80E3D4</item> 
        <item>#B3E0E5</item> 
        <item>#A7C6ED</item> 
        <item>#D9D9D9</item> 
        <item>#FDE288</item> 
        <item>#A5D6A7</item> 
        <item>#FFB3E6</item> 
        <item>#FFC383</item> 
        <item>#FFFAE3</item> 
        <item>#A5D8FF</item> 
        <item>#F3C1B0</item> 
        <item>#D1C6E3</item> 
        <item>#CDDC39</item> 
    </string-array>
    <string-array name="themes_array">
        <item>* Selecciona un tema</item>
        <item>Ropa</item>
        <item>Libros</item>
        <item>Tazas</item>
        <item>Perfumes</item>
        <item>Accesorios</item>
        <item>Deportes</item>
        <item>Navideño</item>
        <item>Suéteres</item>
        <item>Relojes</item>
        <item>Chocolates</item>
        <item>Star Wars</item>
        <item>Harry Potter</item>
        <item>Marvel</item>
        <item>Anime</item>
        <item>Cómputo</item>
        <item>Juegos</item> 
        <item>Música</item> 
        <item>Viajes</item> 
        <item>Decoración del hogar</item> 
        <item>Material de arte</item> 
        <item>Fitness</item> 
    </string-array>
    <string name="language_changed">Idioma cambiado a %1$s</string>
    <string name="theme_changed">Tema cambiado a %1$s</string>
    <string name="editar_avatar">Editar avatar</string>
    <string name="editar_datos">Editar datos</string>
    <string name="selecciona_un_avatar">Selecciona un avatar</string>
    <string name="saltar">Saltar</string>
    <string name="guardar">Guardar</string>
    <string name="please_select">Por favor, selecciona un avatar</string>
    <string name="email_existe">El correo ya está registrado o hubo un error.</string>
    <string name="inconsistencia_participantes">Existe un error en el número de participantes y el número de invitados, comprueba e intenta de nuevo.</string>
    <string name="campo_obligatorio">Este campo es obligatorio</string>
    <string name="num_personas_mayor_uno">El número de personas debe ser mayor a uno</string>
    <string name="ingresar_fecha_interc">Debe ingresar una fecha de intercambio</string>
    <string name="ingresar_fecha_registro">Debe ingresar una fecha máxima de registro</string>
    <string name="fecha_posterior_error">La fecha de registro no puede ser posterior a la fecha del intercambio</string>
    <string name="dia_holgura">Debe haber al menos un día de diferencia entre las fechas</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="resultados_listos_titulo">RESULTADO LISTO</string>
    <string name="participante_asignado_titulo">Participante asignado 👤</string>
    <string name="tema_seleccionado_titulo">Tema que seleccionó 🎁</string>
    <string name="nombre_del_invitado_dlg">Nombre del invitado</string>
    <string name="nota_invitado_warning">Nota: El contacto será invitado por medio de su correo electrónico, el nombre puede cambiar si el usuario maneja otro en su cuenta personal.</string>
    <string name="agregar_a_la_lista">Agregar a la lista</string>
    <string name="correo_electr_nico_del_invitado">Correo electrónico del invitado</string>
</resources>