<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_gradient">

    <TextView
        android:id="@+id/tituloError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_title"
        android:fontFamily="@font/alexandria"
        android:textColor="@color/strong_warning"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/mensajeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seguro_que_quieres_salir"
        android:fontFamily="@font/alexandria"
        android:textColor="@color/textoNegro"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botones_nuevointercambio"
            android:text="@string/ok"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            style="@style/CustomButtonThemeAccept"/>

    </LinearLayout>


</LinearLayout>
