<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultados_listos_titulo"
        android:fontFamily="@font/alexandria"
        android:textColor="#01041B"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tex1title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alexandria"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/participante_asignado_titulo"
        android:textColor="@color/dialog"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="22dp"
        android:background="@color/azulPrincipal"
        android:layout_marginTop="2sp"/>

    <TextView
        android:id="@+id/tex1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="viewStart"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/textoNegro"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tex2title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alexandria"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/tema_seleccionado_titulo"
        android:textColor="@color/dialog"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="22dp"
        android:background="@color/azulPrincipal"
        android:layout_marginTop="2sp"
        app:layout_constraintTop_toBottomOf="@id/tex2title"/>

    <TextView
        android:id="@+id/tex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="viewStart"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/textoNegro"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/botones_nuevointercambio"
            android:text="@string/ok"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            style="@style/CustomButtonThemeAccept"/>

    </LinearLayout>


</LinearLayout>
